# practica_final_modsimrob

./: README.md
speedy_description/: CMakeLists.txt  package.xml
speedy_description/config/: robot_bridge.yaml  speedy_bridge.yaml  speedy_controllers.yaml
speedy_description/launch/: joint_state_publisher_gui.launch.py  robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
speedy_description/meshes/dae/: Cube.001.dae  Cube.003.dae  Cube.006.dae  Cube.007.dae  Cube.008.dae  Cube.009.dae  Cube.018.dae  Cube.019.dae  Cube.020.dae  Cube.022.dae  Cube.104.dae  Cube.dae  Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.005.dae  Cylinder.006.dae  Cylinder.007.dae  Cylinder.008.dae  Cylinder.009.dae  Cylinder.010.dae  Cylinder.011.dae  Cylinder.012.dae  Cylinder.013.dae  Cylinder.014.dae  Cylinder.018.dae  Cylinder.019.dae  Cylinder.020.dae  Cylinder.021.dae  Cylinder.022.dae  Cylinder.023.dae  Cylinder.024.dae  Cylinder.025.dae  Cylinder.026.dae  Cylinder.027.dae  Cylinder.028.dae  Cylinder.029.dae  Cylinder.030.dae  Cylinder.dae  (+11 more)
speedy_description/robots/: speedy.urdf.xacro
speedy_description/rviz/: robot.rviz
speedy_description/urdf/: ros2_control.urdf.xacro
speedy_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
speedy_description/urdf/base/: robot_base.urdf.xacro
speedy_description/urdf/sensors/: sensor_camera.urdf.xacro  sensor_imu.urdf.xacro
speedy_description/urdf/utils/: utils.urdf.xacro
speedy_description/urdf/wheels/: rover_wheel.urdf.xacro  wheels_chasis.urdf.xacro
(+19 files in other folders)
